syntax = "proto3";

option java_package = "com.sudoajay.triumph_path";
option java_multiple_files = true;

message StatePreferences {
  string fajrTiming = 1;
  string dhuhrTiming = 2;
  string asrTiming = 3;
  string maghribTiming = 4;
  string ishaTiming =5;



}
